risolto bug commenti 2.0